[workspace]
members = [
    "anytls-core",
    "anytls-client", 
    "anytls-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["anytls-rs"]
license = "MIT"
repository = "https://github.com/anytls-rs/anytls-rs"

[workspace.dependencies]
anytls-core = { path = "anytls-core" }
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.1"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
md5 = "0.7"
bytes = "1.7"
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
