[package]
name = "anytls-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "anytls-client"
path = "src/main.rs"

[dependencies]
anytls-core = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
webpki-roots = "0.26" 