[package]
name = "anytls-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true } 